# skylake-config

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yaml
cmake/modules/: SkylakeConfigDeps.cmake  SkylakeConfigTest.cmake
cmake/presets/: default_presets.json  dev_presets.json  prod_presets.json  qa_presets.json
src/: CMakeLists.txt
src/include/: skl_config
src/include/skl_config_internal/: array_field.hpp  array_proxy_field.hpp  boolean_field.hpp  c_array_field.hpp  common.hpp  enumc_field.hpp  field.hpp  numeric_field.hpp  object_field.hpp  primitive_array_field.hpp  string_field.hpp  value_field.hpp
src/source/: skl_config.cpp
test/: CMakeLists.txt
workbench/: CMakeLists.txt
workbench/config/: workbench.json
workbench/source/: main.cpp
